--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ feedparser
 gitpython
 heroku3
 psycopg2-binary
+# git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 Pyromod==1.5
 speedtest-cli
